--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -620,3 +620,154 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+// --------------------------------------------- //
+
+@font-face {
+  font-family: "SFProDisplay";
+  src: url("../static/fonts/SFProDisplay-Regular.otf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "SFProDisplay";
+  src: url("../static/fonts/SFProDisplay-Bold.otf");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "SFProDisplay";
+  src: url("../static/fonts/SFProDisplay-Heavy.otf");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-size: 22px;
+  font-family: "SFProDisplay", sans-serif !important;
+  color: #251140;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "SFProDisplay", sans-serif !important;
+}
+
+h1,
+h2 {
+  color: #251140;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.container {
+  max-width: 1160px;
+}
+
+.container-medium {
+  max-width: 1000px;
+}
+
+.btn {
+  transition: 0.3s;
+}
+
+.btn-blue {
+  background: #3d6af2;
+  border-radius: 100px;
+  line-height: 31px;
+  font-weight: 700;
+  color: #ffffff;
+  width: 100%;
+  min-width: 296px;
+  padding-right: 45px;
+  padding-left: 45px;
+  max-width: fit-content;
+  height: 59px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+
+  &:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background: #264ada;
+  }
+}
+
+.btn-light-blue {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-style: none;
+  border-radius: 3px;
+  max-width: 235px;
+  width: 100%;
+  height: 54px;
+  background: #80d1f2;
+  box-shadow: inset 0px 1px 0px #d3f2ff, inset 0 -1px 2px #65a4bf;
+  color: #24113f;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 700;
+  font-style: normal;
+  text-align: center;
+
+  &:hover {
+    background: rgba(81, 172, 218, 1);
+    // box-shadow: inset 0px 2px 4px #21475a;
+    color: #24113f;
+  }
+}
+
+.gatsby-image-background {
+  position: absolute !important;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+// wp class
+.height-adjust {
+  padding-bottom: 18px;
+}
+
+.quiz-container {
+  height: 280px;
+  width: 100%;
+}
+
+.counter {
+  width: 75px;
+  font-weight: bold;
+}
+
+@media (max-width: 767px) {
+  body {
+    font-size: 18px;
+  }
+  section {
+    padding-top: 40px !important;
+    padding-bottom: 40px !important;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+}
