increse font size and color of result

--- a/src/components/ResultBlock/ResultBlock.module.scss
+++ b/src/components/ResultBlock/ResultBlock.module.scss
@@ -7,6 +7,11 @@
     margin-top: 30px;
     margin-bottom: 50px;
   }
+  .LinesWrapper {
+    strong {
+      color: #3d6af2;
+    }
+  }
 
   .LastLine {
     display: flex;
